syntax = "proto3";
package gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1";

import "google/protobuf/struct.proto";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;
import "extproto/ext.proto";
option (extproto.hash_all) = true;

import "gloo/projects/gloo/api/v1/extensions.proto";
import "gloo/projects/gloo/api/v1/options/cors/cors.proto";
import "gloo/projects/gloo/api/v1/options/rest/rest.proto";
import "gloo/projects/gloo/api/v1/options/grpc/grpc.proto";
import "gloo/projects/gloo/api/v1/options/als/als.proto";
import "gloo/projects/gloo/api/v1/options/grpc_web/grpc_web.proto";
import "gloo/projects/gloo/api/v1/options/hcm/hcm.proto";
import "gloo/projects/gloo/api/v1/options/lbhash/lbhash.proto";
import "gloo/projects/gloo/api/v1/options/shadowing/shadowing.proto";
import "gloo/projects/gloo/api/v1/options/tcp/tcp.proto";
import "gloo/projects/gloo/api/v1/options/tracing/tracing.proto";
import "gloo/projects/gloo/api/v1/options/retries/retries.proto";
import "gloo/projects/gloo/api/v1/options/stats/stats.proto";
import "gloo/projects/gloo/api/v1/options/faultinjection/fault.proto";
import "gloo/projects/gloo/api/v1/options/headers/headers.proto";
import "gloo/projects/gloo/api/v1/options/aws/aws.proto";
import "gloo/projects/gloo/api/v1/options/wasm/wasm.proto";
import "gloo/projects/gloo/api/v1/options/azure/azure.proto";
import "gloo/projects/gloo/api/v1/options/healthcheck/healthcheck.proto";
import "gloo/projects/gloo/api/v1/options/protocol_upgrade/protocol_upgrade.proto";

import "gloo/projects/gloo/api/external/envoy/extensions/transformation/transformation.proto";
import "gloo/projects/gloo/api/external/envoy/extensions/proxylatency/proxylatency.proto";
import "gloo/projects/gloo/api/external/envoy/extensions/filters/http/buffer/v3/buffer.proto";
import "gloo/projects/gloo/api/external/envoy/config/filter/http/gzip/v2/gzip.proto";

import "gloo/projects/gloo/api/v1/enterprise/options/extauth/v1/extauth.proto";
import "gloo/projects/gloo/api/v1/enterprise/options/jwt/jwt.proto";
import "gloo/projects/gloo/api/v1/enterprise/options/ratelimit/ratelimit.proto";
import "gloo/projects/gloo/api/v1/enterprise/options/rbac/rbac.proto";
import "gloo/projects/gloo/api/v1/enterprise/options/waf/waf.proto";
import "gloo/projects/gloo/api/v1/enterprise/options/dlp/dlp.proto";
import "gloo/projects/gloo/api/v1/options/transformation/transformation.proto";

import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";

// Optional, feature-specific configuration that lives on gateways.
// Each ListenerOption object contains configuration for a specific feature.
// Note to developers: new Listener plugins must be added to this struct
// to be usable by Gloo. (plugins currently need to be compiled into Gloo)
message ListenerOptions {
    als.options.gloo.solo.io.AccessLoggingService access_logging_service = 1;

    // Extensions will be passed along from Listeners, Gateways, VirtualServices, Routes, and Route tables to the
    // underlying Proxy, making them useful for controllers, validation tools, etc. which interact with kubernetes yaml.
    //
    // Some sample use cases:
    // * controllers, deployment pipelines, helm charts, etc. which wish to use extensions as a kind of opaque metadata.
    // * In the future, Gloo may support gRPC-based plugins which communicate with the Gloo translator out-of-process.
    // Opaque Extensions enables development of out-of-process plugins without requiring recompiling & redeploying Gloo's API.
    Extensions extensions = 2;

    // Soft limit on size of the listener's new connection read and write buffers. If unspecified, defaults to 1MiB
    // For more info, check out the [Envoy docs](https://www.envoyproxy.io/docs/envoy/v1.14.1/api-v2/api/v2/listener.proto)
    google.protobuf.UInt32Value per_connection_buffer_limit_bytes = 3;
}

// Optional, feature-specific configuration that lives on http listeners
message HttpListenerOptions {
    grpc_web.options.gloo.solo.io.GrpcWeb grpc_web = 1;
    hcm.options.gloo.solo.io.HttpConnectionManagerSettings http_connection_manager_settings = 2;
    // enable [Envoy health checks](https://www.envoyproxy.io/docs/envoy/v1.7.0/api-v2/config/filter/http/health_check/v2/health_check.proto) on this listener
    healthcheck.options.gloo.solo.io.HealthCheck health_check = 4;
    // Extensions will be passed along from Listeners, Gateways, VirtualServices, Routes, and Route tables to the
    // underlying Proxy, making them useful for controllers, validation tools, etc. which interact with kubernetes yaml.
    //
    // Some sample use cases:
    // * controllers, deployment pipelines, helm charts, etc. which wish to use extensions as a kind of opaque metadata.
    // * In the future, Gloo may support gRPC-based plugins which communicate with the Gloo translator out-of-process.
    // Opaque Extensions enables development of out-of-process plugins without requiring recompiling & redeploying Gloo's API.
    Extensions extensions = 3;
    // Enterprise-only: Config for Web Application Firewall (WAF), supporting
    // the popular ModSecurity 3.0 ruleset
    waf.options.gloo.solo.io.Settings waf = 5;
    // Enterprise-only: Config for data loss prevention
    dlp.options.gloo.solo.io.FilterConfig dlp = 6;
    // Wasm filter config [very-experimental!]
    // Currently these extensions will only work if Gloo deployed using the helm flag, wasm.enabled=true
    // These require a special nightly version of envoy which is not deployed by default
    wasm.options.gloo.solo.io.PluginSource wasm = 7;
    // Enterprise-only: External auth related settings
    enterprise.gloo.solo.io.Settings extauth = 10;
    // Enterprise-only: Settings for the rate limiting server itself
    ratelimit.options.gloo.solo.io.Settings ratelimit_server = 11;

    // Gzip is an HTTP option which enables Gloo to compress
    // data returned from an upstream service upon client request.
    // Compression is useful in situations where large payloads need to be transmitted without compromising the response time.
    // Example:
    // ```
    // gzip:
    //  contentType:
    //  - "application/json"
    //  compressionLevel: BEST
    // ```
    envoy.config.filter.http.gzip.v2.Gzip gzip = 8;

    // Enterprise-only: Proxy latency
    envoy.config.filter.http.proxylatency.v2.ProxyLatency proxy_latency = 9;

    // Buffer can be used to set the maximum request size
    // that the filter will buffer before the connection
    // manager will stop buffering and return a 413 response.
    envoy.extensions.filters.http.buffer.v3.Buffer buffer = 12;
}

// Optional, feature-specific configuration that lives on tcp listeners
message TcpListenerOptions {
    tcp.options.gloo.solo.io.TcpProxySettings tcp_proxy_settings = 3;
}

// Optional, feature-specific configuration that lives on virtual hosts.
// Each VirtualHostPlugin object contains configuration for a specific feature.
// Note to developers: new Virtual Host plugins must be added to this struct
// to be usable by Gloo. (plugins currently need to be compiled into Gloo)
message VirtualHostOptions {
    // Extensions will be passed along from Listeners, Gateways, VirtualServices, Routes, and Route tables to the
    // underlying Proxy, making them useful for controllers, validation tools, etc. which interact with kubernetes yaml.
    //
    // Some sample use cases:
    // * controllers, deployment pipelines, helm charts, etc. which wish to use extensions as a kind of opaque metadata.
    // * In the future, Gloo may support gRPC-based plugins which communicate with the Gloo translator out-of-process.
    // Opaque Extensions enables development of out-of-process plugins without requiring recompiling & redeploying Gloo's API.
    Extensions extensions = 1;
    retries.options.gloo.solo.io.RetryPolicy retries = 5;
    stats.options.gloo.solo.io.Stats stats = 10;
    // Append/Remove headers on Requests or Responses on all routes contained in this Virtual Host
    headers.options.gloo.solo.io.HeaderManipulation header_manipulation = 2;
    // Defines a CORS policy for the virtual host
    // If a CORS policy is also defined on the route matched by the request, the policies are merged.
    cors.options.gloo.solo.io.CorsPolicy cors = 3;
    // Transformations to apply. Note: this field is superceded by `staged_transformations`.
    // If `staged_transformations.regular` is set, this field will be ignored.
    transformation.options.gloo.solo.io.Transformations transformations = 4 [deprecated = true];
    // Enterprise-only: Config for GlooE rate-limiting using simplified (gloo-specific) API
    ratelimit.options.gloo.solo.io.IngressRateLimit ratelimit_basic = 6;
    // Enterprise-only: Partial config for GlooE rate-limiting based on Envoy's rate-limit service;
    // supports Envoy's rate-limit service API. (reference here: https://github.com/lyft/ratelimit#configuration)
    // Configure rate-limit *actions* here, which define how request characteristics get translated into
    // descriptors used by the rate-limit service for rate-limiting. Configure rate-limit *descriptors* and
    // their associated limits on the Gloo settings
    ratelimit.options.gloo.solo.io.RateLimitVhostExtension ratelimit = 7;
    // Enterprise-only: Config for Web Application Firewall (WAF), supporting
    // the popular ModSecurity 3.0 ruleset
    waf.options.gloo.solo.io.Settings waf = 8;
    // Enterprise-only: Config for reading and verifying JWTs. Copy verifiable information from JWTs into other
    // headers to make routing decisions or combine with RBAC for fine-grained access control.
    jwt.options.gloo.solo.io.VhostExtension jwt = 9;
    // Enterprise-only: Config for RBAC (currently only supports RBAC based on JWT claims)
    rbac.options.gloo.solo.io.ExtensionSettings rbac = 11;
    // Enterprise-only: Authentication configuration
    enterprise.gloo.solo.io.ExtAuthExtension extauth = 12;
    // Enterprise-only: Config for data loss prevention
    dlp.options.gloo.solo.io.Config dlp = 13;
    // BufferPerRoute can be used to set the maximum request size
    // that the filter will buffer before the connection
    // manager will stop buffering and return a 413 response.
    // Note: If you have not set a global config (at the gateway level), this
    // override will not do anything by itself.
    envoy.extensions.filters.http.buffer.v3.BufferPerRoute buffer_per_route = 14;
    // Early transformations stage. These transformations run before most other options are processed.
    // If the `regular` field is set in here, the `transformations` field is ignored.
    transformation.options.gloo.solo.io.TransformationStages staged_transformations = 17;
}

// Optional, feature-specific configuration that lives on routes.
// Each RouteOption object contains configuration for a specific feature.
// Note to developers: new Route plugins must be added to this struct
// to be usable by Gloo. (plugins currently need to be compiled into Gloo)
message RouteOptions {
    // Transformations to apply. Note: this field is superceded by `staged_transformations`.
    // If `staged_transformations.regular` is set, this field will be ignored.
    transformation.options.gloo.solo.io.Transformations transformations = 1 [deprecated = true];
    fault.options.gloo.solo.io.RouteFaults faults = 2;
    // For requests matched on this route, rewrite the HTTP request path to the provided value before forwarding upstream
    google.protobuf.StringValue prefix_rewrite = 3;
    // Specifies the upstream timeout for the route. If not specified, the default is 15s. This spans between the point
    // at which the entire downstream request (i.e. end-of-stream) has been processed and when the upstream response has
    // been completely processed. A value of 0 will disable the routeâ€™s timeout.
    google.protobuf.Duration timeout = 4 [(gogoproto.stdduration) = true];
    retries.options.gloo.solo.io.RetryPolicy retries = 5;
    // Extensions will be passed along from Listeners, Gateways, VirtualServices, Routes, and Route tables to the
    // underlying Proxy, making them useful for controllers, validation tools, etc. which interact with kubernetes yaml.
    //
    // Some sample use cases:
    // * controllers, deployment pipelines, helm charts, etc. which wish to use extensions as a kind of opaque metadata.
    // * In the future, Gloo may support gRPC-based plugins which communicate with the Gloo translator out-of-process.
    // Opaque Extensions enables development of out-of-process plugins without requiring recompiling & redeploying Gloo's API.
    Extensions extensions = 6;
    // Defines route-specific tracing configuration.
    // See here for additional information on Envoy's tracing capabilities: https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/observability/tracing.html
    // See here for additional information about configuring tracing with Gloo: https://gloo.solo.io/observability/tracing/
    tracing.options.gloo.solo.io.RouteTracingSettings tracing = 7;
    // Specifies traffic shadowing configuration for the route.
    // See here for additional information on Envoy's shadowing capabilities: https://www.envoyproxy.io/docs/envoy/latest/api-v2/api/v2/route/route.proto#envoy-api-msg-route-routeaction-requestmirrorpolicy
    shadowing.options.gloo.solo.io.RouteShadowing shadowing = 8;
    // Append/Remove headers on Requests or Responses on this Route
    headers.options.gloo.solo.io.HeaderManipulation header_manipulation = 9;
    // For requests matched on this route, rewrite the Host header before forwarding upstream
    oneof host_rewrite_type {
        // Indicates that during forwarding, the host header will be swapped with this value.
        string host_rewrite = 10;
        // Enable/Disable auto host re-write.
        // Indicates that the host header will be swapped with the hostname of the upstream host.
        // This setting is only honored for upstreams that use DNS resolution (i.e., their generated Envoy cluster is
        // of type STRICT_DNS or LOGICAL_DNS -- think aws, azure, or static upstreams with hostnames)
        google.protobuf.BoolValue auto_host_rewrite = 19;
    };
    // Defines a CORS policy for the route
    // If a CORS policy is also defined on the route's virtual host, the policies are merged.
    cors.options.gloo.solo.io.CorsPolicy cors = 11;
    // For routes served by a hashing load balancer, this defines the input to the hash key
    // Gloo configures Envoy with the first available RouteActionHashConfig among the following ordered list of providers:
    // - route, upstream, virtual service
    lbhash.options.gloo.solo.io.RouteActionHashConfig lb_hash = 12;
    // Route configuration for protocol upgrade requests.
    repeated protocol_upgrade.options.gloo.solo.io.ProtocolUpgradeConfig upgrades = 21;
    // Enterprise-only: Config for GlooE rate-limiting using simplified (gloo-specific) API
    ratelimit.options.gloo.solo.io.IngressRateLimit ratelimit_basic = 13;
    // Enterprise-only: Partial config for GlooE rate-limiting based on Envoy's rate-limit service;
    // supports Envoy's rate-limit service API. (reference here: https://github.com/lyft/ratelimit#configuration)
    // Configure rate-limit *actions* here, which define how request characteristics get translated into
    // descriptors used by the rate-limit service for rate-limiting. Configure rate-limit *descriptors* and
    // their associated limits on the Gloo settings
    ratelimit.options.gloo.solo.io.RateLimitRouteExtension ratelimit = 14;
    // Enterprise-only: Config for Web Application Firewall (WAF), supporting
    // the popular ModSecurity 3.0 ruleset
    waf.options.gloo.solo.io.Settings waf = 15;
    // Enterprise-only: Config for reading and verifying JWTs. Copy verifiable information from JWTs into other
    // headers to make routing decisions or combine with RBAC for fine-grained access control.
    jwt.options.gloo.solo.io.RouteExtension jwt = 16;
    // Enterprise-only: Config for RBAC (currently only supports RBAC based on JWT claims)
    rbac.options.gloo.solo.io.ExtensionSettings rbac = 17;
    // Enterprise-only: Authentication configuration
    enterprise.gloo.solo.io.ExtAuthExtension extauth = 18;
    // Enterprise-only: Config for data loss prevention
    dlp.options.gloo.solo.io.Config dlp = 20;

    // BufferPerRoute can be used to set the maximum request size
    // that the filter will buffer before the connection
    // manager will stop buffering and return a 413 response.
    // Note: If you have not set a global config (at the gateway level), this
    // override will not do anything by itself.
    envoy.extensions.filters.http.buffer.v3.BufferPerRoute buffer_per_route = 22;

    // Early transformations stage. These transformations run before most other options are processed.
    // If the `regular` field is set in here, the `transformations` field is ignored.
    transformation.options.gloo.solo.io.TransformationStages staged_transformations = 23;
}

// Configuration for Destinations that are tied to the UpstreamSpec or ServiceSpec on that destination
message DestinationSpec {
    // Note to developers: new DestinationSpecs must be added to this oneof field
    // to be usable by Gloo.
    oneof destination_type {
        aws.options.gloo.solo.io.DestinationSpec aws = 1;
        azure.options.gloo.solo.io.DestinationSpec azure = 2;
        rest.options.gloo.solo.io.DestinationSpec rest = 3;
        grpc.options.gloo.solo.io.DestinationSpec grpc = 4;
    }
}

// Optional, feature-specific configuration that is applied when a specific weighted destination
// is selected for routing.
message WeightedDestinationOptions {
    // Append/Remove headers on Requests or Responses to/from this Weighted Destination
    headers.options.gloo.solo.io.HeaderManipulation header_manipulation = 1;
    // Transformations to apply. Note: this field is superceded by `staged_transformations`.
    // If `staged_transformations.regular` is set, this field will be ignored.
    transformation.options.gloo.solo.io.Transformations transformations = 2 [deprecated = true];
    // Extensions will be passed along from Listeners, Gateways, VirtualServices, Routes, and Route tables to the
    // underlying Proxy, making them useful for controllers, validation tools, etc. which interact with kubernetes yaml.
    //
    // Some sample use cases:
    // * controllers, deployment pipelines, helm charts, etc. which wish to use extensions as a kind of opaque metadata.
    // * In the future, Gloo may support gRPC-based plugins which communicate with the Gloo translator out-of-process.
    // Opaque Extensions enables development of out-of-process plugins without requiring recompiling & redeploying Gloo's API.
    Extensions extensions = 3;
    // Enterprise-only: Authentication configuration
    enterprise.gloo.solo.io.ExtAuthExtension extauth = 4;
    // BufferPerRoute can be used to set the maximum request size
    // that the filter will buffer before the connection
    // manager will stop buffering and return a 413 response.
    // Note: If you have not set a global config (at the gateway level), this
    // override will not do anything by itself.
    envoy.extensions.filters.http.buffer.v3.BufferPerRoute buffer_per_route = 5;

    // Early transformations stage. These transformations run before most other options are processed.
    // If the `regular` field is set in here, the `transformations` field is ignored.
    transformation.options.gloo.solo.io.TransformationStages staged_transformations = 6;
}
